# ndcourts-mcp

./: .gitignore  BUILD.md  CHANGELOG-data-primarylaw.md  CHANGELOG-data.md  CLAUDE.md  NOTICE.md  README.md  SCHEMA.md  TODO-audit.md  TODO-primarylaw.md  TODO-validation.md  TOOLS.md  confirmed-authors.json  not-duplicates.json  pyproject.toml  westlaw-quickcheck-sample.js
data/: const_history_judgment_calls.md  const_history_ocr_judgments.md  const_revalidation_round2_2026-06-08.json  constitution_amendments.json
deploy/: CLIENTS.md  SETUP.md  bootstrap.sh  mcp-apache.conf  ndcourts.mcpb
ndcourts_mcp/: align_primary_source.py  audit.py  audit_corpus.py  audit_sources.py  auto_author.py  backfill_sources.py  backfill_westlaw_paths.py  cite_extract.py  cleanup.py  corpus.py  db.py  dedup_scan.py  fix_archive_pairings.py  fix_type_y_archive_pairings.py  fix_westlaw_pairings.py  ingest.py  ingest_admin.py  ingest_constitution_history.py  ingest_nwcite.py  ingest_statutes.py  ingest_westlaw.py  insert_supplemental_opinions.py  invariants.py  justices.py  memo.py  merge_opinions.py  merge_westlaw_text.py  migrate_changelog_cl.py  migrate_reporter_taxonomy.py  multisource_diff.py  nd_const_phrases.py  quality_report.py  quality_scan.py  receive_westlaw.py  recompute_is_primary.py  research.py  scrape_archive.py  scrape_nwcite.py  server.py  strip_westlaw_synopsis.py  (+5 more)
scripts/: backfill_gov_urls.py  fix_revalidation_round2_2026-06-08.py  make_release.sh  reextract_pdfminer_2026-06-09.py  wf_amend_extract.js  wf_amend_extract_pdf.js
triage/: HANDOFF-2026-05-27-pm.md  (+107 more)
(+4 files in other folders)
