[project]
name = "ndcourts-mcp"
version = "0.1.0"
description = "MCP server for North Dakota Supreme Court opinions (1889–present)"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
]

[project.scripts]
ndcourts-mcp = "ndcourts_mcp.server:main"
ndcourts-ingest = "ndcourts_mcp.ingest:main"
